FullQa New/src/PS Enterprise/objects/Schedule_Exception__c.object
<CustomObject>
    <customHelpPage>ScheduleExceptionHelp</customHelpPage>
    <description>Specifies an exception from the standard daily hours worked by a resource on an assignment. Schedule exceptions can be created per day or for any duration that lies within an existing schedule. Created automatically when you select a scheduling strategy for an assignment, edit an existing scheduling strategy using the assignment Edit Schedule button, or edit a schedule in the Resource or Project Planners. If configured, a resource can edit schedules on the Timecard Entry page, in the Schedules section.</description>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Enter the start date of the exception date range</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date of the exception date range</description>
        <inlineHelpText>The end date of the exception date range</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Enter the default number of hours to use if no value is given for an individual day. For example, if this value is 2 and no value for Monday Hours is supplied, the number of hours for Monday will be treated as 2.</description>
        <inlineHelpText>Enter the default number of hours to use if no value is given for an individual day. For example, if this value is 2 and no value for Monday Hours is supplied, the number of hours for Monday will be treated as 2.</inlineHelpText>
        <label>Default Exception Hours Per Day</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friday_End_Time__c</fullName>
        <description>Friday End Time is the scheduled end time on the indicated day.</description>
        <inlineHelpText>Friday End Time is the scheduled end time on the indicated day.</inlineHelpText>
        <label>Friday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Friday_Start_Time__c</fullName>
        <description>Friday Start Time is the scheduled start time on the indicated day.</description>
        <inlineHelpText>Friday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
        <label>Friday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_End_Time__c</fullName>
        <description>Monday End Time is the scheduled end time on the indicated day.</description>
        <inlineHelpText>Monday End Time is the scheduled end time on the indicated day.</inlineHelpText>
        <label>Monday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <label>Monday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday_Start_Time__c</fullName>
        <description>Monday Start Time is the scheduled start time on the indicated day.</description>
        <inlineHelpText>Monday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
        <label>Monday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday_End_Time__c</fullName>
        <description>Saturday End Time is the scheduled end time on the indicated day.</description>
        <inlineHelpText>Saturday End Time is the scheduled end time on the indicated day.</inlineHelpText>
        <label>Saturday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Saturday_Start_Time__c</fullName>
        <description>Saturday Start Time is the scheduled start time on the indicated day.</description>
        <inlineHelpText>Saturday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
        <label>Saturday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipLabel>Schedule Exceptions</relationshipLabel>
        <relationshipName>Schedule_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sunday_End_Time__c</fullName>
        <description>Sunday End Time is the scheduled end time on the indicated day.</description>
        <inlineHelpText>Sunday End Time is the scheduled end time on the indicated day.</inlineHelpText>
        <label>Sunday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sunday_Start_Time__c</fullName>
        <description>Sunday Start Time is the scheduled start time on the indicated day.</description>
        <inlineHelpText>Sunday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
        <label>Sunday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thursday_End_Time__c</fullName>
        <description>Thursday End Time is the scheduled end time on the indicated day.</description>
        <inlineHelpText>Thursday End Time is the scheduled end time on the indicated day.</inlineHelpText>
        <label>Thursday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thursday_Start_Time__c</fullName>
        <description>Thursday Start Time is the scheduled start time on the indicated day.</description>
        <inlineHelpText>Thursday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
        <label>Thursday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tuesday_End_Time__c</fullName>
        <description>Tuesday End Time is the scheduled end time on the indicated day.</description>
        <inlineHelpText>Tuesday End Time is the scheduled end time on the indicated day.</inlineHelpText>
        <label>Tuesday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_Start_Time__c</fullName>
        <description>Tuesday Start Time is the scheduled start time on the indicated day.</description>
        <inlineHelpText>Tuesday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
        <label>Tuesday Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wednesday_End_Time__c</fullName>
        <description>Wednesday End Time is the scheduled end time on the indicated day.</description>
        <inlineHelpText>Wednesday End Time is the scheduled end time on the indicated day.</inlineHelpText>
        <label>Wednesday End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Start_Time__c</fullName>
        <description>Wednesday Start Time is the scheduled start time on the indicated day.</description>
        <inlineHelpText>Wednesday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
        <label>Wednesday Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Schedule Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SchedException{000000000}</displayFormat>
        <label>Schedule Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Date_Range</fullName>
        <active>true</active>
        <errorConditionFormula>OR( Date__c &gt;  Schedule__r.End_Date__c, Date__c &lt; Schedule__r.Start_Date__c, End_Date__c &gt; Schedule__r.End_Date__c, End_Date__c &lt; Schedule__r.Start_Date__c )</errorConditionFormula>
        <errorMessage>Start and/or End Date does not fall within the start and end dates of the schedule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>check_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date</errorMessage>
    </validationRules>
</CustomObject>